--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+	"postinstall": "ng build --aot --prod"
   },
   "private": true,
   "dependencies": {
@@ -22,7 +23,8 @@
     "@angular/router": "^6.0.3",
     "core-js": "^2.5.4",
     "rxjs": "^6.0.0",
-    "zone.js": "^0.8.26"
+    "zone.js": "^0.8.26",
+	"express": "^4.16.3"
   },
   "devDependencies": {
     "@angular/compiler-cli": "^6.0.3",
@@ -44,5 +46,9 @@
     "protractor": "~5.3.0",
     "ts-node": "~5.0.1",
     "tslint": "~5.9.1"
+  },
+  "engines": {
+	"node": "~8.11.3",
+	"npm": "~5.6.0"
   }
 }
