--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@fortawesome/angular-fontawesome": "^0.1.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.4",
     "@fortawesome/free-solid-svg-icons": "^5.3.1",
+    "@ng-bootstrap/ng-bootstrap": "^3.2.0",
     "core-js": "^2.5.4",
     "express": "^4.16.3",
     "moment": "^2.22.2",
