--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "express": "^4.16.3",
     "moment": "^2.22.2",
     "moment-timezone": "^0.5.21",
+    "ngx-cookie-service": "^1.0.10",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
   },
