--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.4",
     "@fortawesome/free-solid-svg-icons": "^5.3.1",
     "@ng-bootstrap/ng-bootstrap": "^3.2.0",
+    "classlist.js": "^1.1.20150312",
     "core-js": "^2.5.4",
     "express": "^4.16.3",
     "moment": "^2.22.2",
